# resorter

./: .gitignore  default.nix  devshell.toml  flake.nix  pyproject.toml  resort  resorter.R
shell/: default.nix  shell.nix
src/: colors.R  presort  resort  resorter-orig.R  resorter.R
src/presorter/: pyproject.toml
src/presorter/presorter/: __init__.py  cli.py
