[tool.poetry]
name = "resorter"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
httpx = "^0.19.0"
feather = "^0.1.2"
pyarrow = "^5.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
