[tool.poetry]
name = "presorter"
version = "0.1.0"
description = ""
authors = ["David Grimsley"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
httpx = "^0.19.0"
feather = "^0.1.2"
pyarrow = "^6.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[tool.poetry.scripts]
presort = "presorter.cli:presort"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
